<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.diagnosisPrescriptionDoctorView">

    <TextView
        android:id="@+id/prescriptonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/prescription"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/patientNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/diagnosisEditText" />

    <TextView
        android:id="@+id/patientNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Patient Name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAppointItem" />

    <TextView
        android:id="@+id/phoneNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:inputType="phone"
        android:text="Phone number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patientNameTextView" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAppointItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8BC34A"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/back_description"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarAppointItem"
        app:layout_constraintStart_toStartOf="@+id/toolbarAppointItem"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/appointItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/diag_prescript"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarAppointItem"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diagText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/diagnosis"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/patientNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/patientNameTextView" />

    <EditText
        android:id="@+id/diagnosisEditText"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/diagnosis"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diagText" />

    <EditText
        android:id="@+id/quantityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/quantity"
        app:layout_constraintEnd_toEndOf="@+id/medNameEditText"
        app:layout_constraintStart_toStartOf="@+id/medNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/medNameEditText" />

    <EditText
        android:id="@+id/instructionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/instruction"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/medNameEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/medNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/quantityEditText" />

    <EditText
        android:id="@+id/medNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/medication_name"
        app:layout_constraintEnd_toEndOf="@+id/diagnosisEditText"
        app:layout_constraintStart_toStartOf="@+id/diagnosisEditText"
        app:layout_constraintTop_toBottomOf="@+id/prescriptonTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>